third commit, implemented the file upload method